2015-10-15 Michele Pinamonti <michele.pinamonti@gmail.com>
        * TtHFit, Region, TthPlot: bin-blinding (as in tth bb lep analysis Run 2) implemented; use the option "BlindingThreshold: 0.02" under Fit in config
        * TtHFit: NP ranking small fixes + parallelization (use inline option Ranking=<name/index of systematic> to run on for single NP - then merge at the plotting stage, with the option Ranking=plot)
        * TtHFit: NP ranking plot method added (run with r argument with no "Ranking" option or with Ranking=plot option)

2015-10-14 Arthur Chomont <arthur.chomont@cern.ch>
        * TtHFit, FittingTool: NP Ranking ported to new Fitting routine
        
2015-10-09 Michele Pinamonti <michele.pinamonti@gmail.com>
        * TtHFit, Sample: added option to include Samples only in some Regions (use Regions: and/or Exclude: in config file)
        * Other small fixes
        * TtHFit, SampleHist: OVERALL systs now saved with correct name as histograms in root file
        * TtHFit: option added in order to write and read separated root files for different regions (faster and can be parallelized)
        * TtHFit: Separation plot added (by Leonid Serkin)
        * TtHFit, FittingTool: Ranking plot stuff partially ported to new Fitting routine
        
2015-10-03 Loic Valery <lvalery@cern,ch>
	* Improve style of systematics checks plots (and add the stat error information)
  	* Adding more checks for null content after symmetrisation and smoothing

2015-10-03 Loic Valery <lvalery@cern.ch>
        * Changing setup for ROOT6 (required access to /cvmfs/)
        * Cleaning Makefile and adapting it to ROOT6
        * Adding class for fitting
        * Propagates new class for fitting into TtHFit.C
        * Change structure of CONFIG file to separate Job and Fit parts and propagate this to TtHFit.C
        * Adding Category for systematics (splitting the pulls plots depending on categories)
	* Changing structure of plot for systematics checks
