@@ -23,6 +23,7 @@ Job: "ttH2015"
 %   CorrelationThreshold: 0.20
   HistoChecks: NOCRASH
   SplitHistoFiles: TRUE   % set this in order to have separated .root files in Histograms/ for different regions
+  ImageFormat: "png"
 
 
 % --------------- %
