@@ -1,0 +1,347 @@
+% --------------- %
+% ---  JOB    --- %
+% --------------- %
+
+Job: "ttHbbLjetBase" 
+  CmeLabel: "13 TeV"
+  POI: "SigXsecOverSM"
+  ReadFrom: NTUP
+  NtuplePaths: "/gpfs/atlas/public/ttH_ntup2015/flatNtup_TTHBB_V1_L2/"   % put here your mini-ntuples location
+  Label: "Single Lepton"
+  LumiLabel: "1.04 fb^{-1}"
+%   LumiLabel: "5 fb^{-1}"
+  MCweight: "FinalWeight*weight_leptonSF*weight_bTagSF_77"   % this is the total weight; FinalWeight here is obtained from x-sec, lumi and number of events
+  Lumi: 1037.23
+%   LumiScale: 4.808    % use this to scale `on the fly' (i.e. after option "n" or "h") MC samples - e.g. for fast projections
+  Selection: "(ejets || mujets)"
+  PlotOptions: "YIELDS"
+  NtupleName: "nominal"
+  DebugLevel: 0
+  MCstatThreshold: 0.10
+  SystControlPlots: TRUE
+  SystPruningShape: 0.01
+  SystPruningNorm: 0.01
+%   CorrelationThreshold: 0.20
+  HistoChecks: NOCRASH
+  SplitHistoFiles: TRUE   % set this in order to have separated .root files in Histograms/ for different regions
+  BlindingThreshold: 0.02  % IMPORTANT: add this if you include data!!
+  RankingMaxNP: 10
+  ImageFormat: "png"
+
+
+% --------------- %
+% ---  FIT    --- %
+% --------------- %
+
+Fit: "FullFit"
+  FitType: SPLUSB
+  FitRegion: CRSR
+
+
+% --------------- %
+% --- REGIONS --- %
+% --------------- %
+  
+Region: "HThad_4j2b"; "HThad_5j2b"; "HThad_ge6j2b"
+  Type: CONTROL
+  Variable: "HhadT_jets/1e3",30,100,1600
+  VariableTitle: "H_{T}^{had} [GeV]"
+  Label: "4 j, 2 b"; "5 j, 2 b"; "#geq 6 j, 2 b"
+  ShortLabel: "4j,2b"; "5j,2b"; "#geq6j,2b"
+  NtuplePathSuff: "4j2b"; "5j2b"; "ge6j2b"
+  Binning: 100,200,250,300,350,400,450,500,550,600,650,700,800,1000,1600;100,200,250,300,350,400,450,500,550,600,650,700,800,1000,1600;100,250,300,350,400,450,500,550,600,650,700,800,1000,1600
+  BinWidth: 50
+  
+Region: "HThad_4j3b"; "HThad_5j3b"
+  Type: CONTROL; CONTROL
+  Variable: "HhadT_jets/1e3",30,100,1600
+  VariableTitle: "H_{T}^{had} [GeV]"
+  Label: "4 j, 3 b"; "5 j, 3 b"; "#geq 6 j, 3 b"
+  ShortLabel: "4j,3b"; "5j,3b"; "#geq6j,3b"
+  NtuplePathSuff: "4j3b"; "5j3b"; "ge6j3b"
+  Binning: 100,200,300,400,500,600,700,800,1000,1600;100,200,300,400,500,600,700,800,1000,1600;100,300,400,500,600,700,800,1000,1600
+  BinWidth: 100
+  
+Region: "HThad_4jge4b"
+  Type: CONTROL
+  Variable: "HhadT_jets/1e3",30,100,1600
+  VariableTitle: "H_{T}^{had} [GeV]"
+  Label: "4 j, #geq 4 b"; "5 j, #geq 4 b"; "#geq 6 j, #geq 4 b"
+  ShortLabel: "4j,#geq4b"; "5j,#geq4b"; "#geq6j,#geq4b"
+  NtuplePathSuff: "4jge4b"; "5jge4b"; "ge6jge4b"
+  Binning: 100,300,500,700,900,1100,1600
+  BinWidth: 200
+  
+%% USE THE FOLLOWING LINES TO DO A HThad-only fit
+% Region: "HThad_ge6j3b"; "HThad_5jge4b"; "HThad_ge6jge4b"
+%   Type: SIGNAL; SIGNAL; SIGNAL
+%   Variable: "HhadT_jets/1e3",30,100,1600
+%   VariableTitle: "H_{T}^{had} [GeV]"
+%   Label: "#geq 6 j, 3 b"
+%   ShortLabel: "#geq6j,3b"
+%   NtuplePathSuff: "ge6j3b"
+%   Binning: 100,300,400,500,600,700,800,1000,1600;100,300,500,700,900,1100,1600;100,300,500,700,900,1100,1600
+%   BinWidth: 100;200;200
+
+%% USE THE FOLLOWING LINES FOR A NN OUTPUT FIT
+Region: "NN_5jge4b"; "NN_ge6j3b"; "NN_ge6jge4b"
+  Type: SIGNAL
+  Variable: "NN_5jex4bin",10,-1,1; "NN_6jin3bex",10,-1,1; "NN_6jin4bin",10,-1,1 
+  VariableTitle: "NN output"
+  Label: "5 j, #geq 4 b"; "#geq 6 j, 3 b"; "#geq 6 j, #geq 4 b"
+  ShortLabel: "5j,#geq4b"; "#geq6j,3b"; "#geq6j,#geq4b"
+  NtuplePathSuff: "5jge4b"; "ge6j3b"; "ge6jge4b"
+  Binning: -1,-0.7,-0.4,-0.2,0.0,0.2,0.4,0.7,1.0
+  BinWidth: 0.2
+
+% --------------- %
+% --- SAMPLES --- %
+% --------------- %
+
+%% Keep data commented out to perform asimov fits - Note: if you include data, make sure you include blinding as well!
+% Sample: "Data"
+%   Title: "Data 2015"
+%   Type: DATA
+%   NtupleFile: "data"
+
+Sample: "ttH"
+  Type: SIGNAL
+  Title: "t#bar{t}H"
+  FillColor: 2
+  LineColor: 2
+  NtupleFile: "ttH"
+  NormFactor: "SigXsecOverSM",1,-10,100
+
+Sample: "ttbar"
+  Type: BACKGROUND
+  Title: "t#bar{t} + jets"
+  FillColor: 0
+  LineColor: 1
+  NtupleFile: "ttbar"
+
+Sample: "ttV"
+  Type: BACKGROUND
+  Title: "t#bar{t} + W/Z"
+  FillColor: 0
+  LineColor: 1
+  NtupleFile: "ttV"
+  
+Sample: "wjets"
+  Type: BACKGROUND
+  Title: "W + jets"
+  Group: "W/Z + jets"
+  FillColor: 92
+  LineColor: 1
+  NtupleFile: "wjets"
+  
+Sample: "zjets"
+  Type: BACKGROUND
+  Title: "Z + jets"
+  Group: "W/Z + jets"
+  FillColor: 95
+  LineColor: 1
+  NtupleFile: "zjets"
+  
+Sample: "singleTop"
+  Type: BACKGROUND
+  Title: "Single Top"
+  FillColor: 62
+  LineColor: 1
+  NtupleFile: "singleTop"
+
+  
+% --------------- %
+% - SYSTEMATICS - %
+% --------------- %
+
+% Normalization only
+
+Systematic: "Luminosity"
+  Title: "Luminosity" 
+  Type: OVERALL
+  Samples: all
+  OverallUp: 0.10
+  OverallDown: -0.10
+
+Systematic: "wjXsec"; "zjXsec"
+  Title: "W+jets x-section" ; "Z+jets x-section" 
+  Type: OVERALL
+  Samples: wjets; zjets
+  OverallUp: 0.48
+  OverallDown: -0.48
+  
+Systematic: "stXsec"
+  Title: "Single top x-section" 
+  Type: OVERALL
+  Samples: singleTop
+  OverallUp:    0.10
+  OverallDown: -0.10
+  
+Systematic: "ttvXsec"
+  Title: "t#bar{t}+W/Z x-section" 
+  Type: OVERALL
+  Samples: ttV
+  OverallUp:    0.10
+  OverallDown: -0.10
+
+Systematic: "ttXsec"
+  Title: "t#bar{t} x-section" 
+  Type: OVERALL
+  Samples: ttbar
+  OverallUp:    0.10
+  OverallDown: -0.10
+
+% Weight systematics
+  
+Systematic: "wjNjets";  "zjNjets"
+  Title: "W+jets Njets"; "Z+jets Njets" 
+  Type: HISTO
+  Samples: wjets; zjets
+  WeightSufUp: "(1+0.24*(jet_n-4))"
+  WeightSufDown: "(1-0.24*(jet_n-4))*((1-0.24*(jet_n-4))>0) + 1e-6*((1-0.24*(jet_n-4))<=0)"   % protection added against negative
+  Smoothing: 40
+
+Systematic: "BTag_B_NP1"; "BTag_B_NP2"; "BTag_B_NP3"; "BTag_B_NP4"; "BTag_B_NP5"; "BTag_B_NP6"
+  Title: "b-tag Eigenvar. 1";"b-tag Eigenvar. 2";"b-tag Eigenvar. 3";"b-tag Eigenvar. 4";"b-tag Eigenvar. 5";"b-tag Eigenvar. 6"
+  Type: HISTO
+%   Samples: all
+  Samples: ttbar ttH
+  WeightSufUp: "weight_bTagSF_eigenvars_B_up[0]/weight_bTagSF"; "weight_bTagSF_eigenvars_B_up[1]/weight_bTagSF"; "weight_bTagSF_eigenvars_B_up[2]/weight_bTagSF"; "weight_bTagSF_eigenvars_B_up[3]/weight_bTagSF"; "weight_bTagSF_eigenvars_B_up[4]/weight_bTagSF"; "weight_bTagSF_eigenvars_B_up[5]/weight_bTagSF"
+  WeightSufDown: "weight_bTagSF_eigenvars_B_down[0]/weight_bTagSF"; "weight_bTagSF_eigenvars_B_down[1]/weight_bTagSF"; "weight_bTagSF_eigenvars_B_down[2]/weight_bTagSF"; "weight_bTagSF_eigenvars_B_down[3]/weight_bTagSF"; "weight_bTagSF_eigenvars_B_down[4]/weight_bTagSF"; "weight_bTagSF_eigenvars_B_down[5]/weight_bTagSF"
+  Smoothing: 40
+  Symmetrisation: TWOSIDED
+  
+Systematic: "BTag_C_NP1"; "BTag_C_NP2"; "BTag_C_NP3"; "BTag_C_NP4"
+  Title: "c-tag Eigenvar. 1";"c-tag Eigenvar. 2";"c-tag Eigenvar. 3";"c-tag Eigenvar. 4"
+  Type: HISTO
+%   Samples: all
+  Samples: ttbar ttH
+  WeightSufUp: "weight_bTagSF_eigenvars_C_up[0]/weight_bTagSF"; "weight_bTagSF_eigenvars_C_up[1]/weight_bTagSF"; "weight_bTagSF_eigenvars_C_up[2]/weight_bTagSF"; "weight_bTagSF_eigenvars_C_up[3]/weight_bTagSF"
+  WeightSufDown: "weight_bTagSF_eigenvars_C_down[0]/weight_bTagSF"; "weight_bTagSF_eigenvars_C_down[1]/weight_bTagSF"; "weight_bTagSF_eigenvars_C_down[2]/weight_bTagSF"; "weight_bTagSF_eigenvars_C_down[3]/weight_bTagSF"
+  Smoothing: 40
+  Symmetrisation: TWOSIDED
+
+Systematic: "BTag_Light_NP1"; "BTag_Light_NP2"; "BTag_Light_NP3"; "BTag_Light_NP4"; "BTag_Light_NP5"; "BTag_Light_NP6"; "BTag_Light_NP7"; "BTag_Light_NP8"; "BTag_Light_NP9"; "BTag_Light_NP10"; "BTag_Light_NP11"; "BTag_Light_NP12"
+  Title: "light-tag Eigenvar. 1";"light-tag Eigenvar. 2";"light-tag Eigenvar. 3";"light-tag Eigenvar. 4";"light-tag Eigenvar. 5";"light-tag Eigenvar. 6"; "light-tag Eigenvar. 7";"light-tag Eigenvar. 8";"light-tag Eigenvar. 9";"light-tag Eigenvar. 10";"light-tag Eigenvar. 11";"light-tag Eigenvar. 12"
+  Type: HISTO
+%   Samples: all
+  Samples: ttbar ttH
+  WeightSufUp: "weight_bTagSF_eigenvars_Light_up[0]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_up[1]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_up[2]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_up[3]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_up[4]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_up[5]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_up[6]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_up[7]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_up[8]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_up[9]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_up[10]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_up[11]/weight_bTagSF"
+  WeightSufDown: "weight_bTagSF_eigenvars_Light_down[0]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_down[1]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_down[2]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_down[3]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_down[4]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_down[5]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_down[6]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_down[7]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_down[8]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_down[9]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_down[10]/weight_bTagSF"; "weight_bTagSF_eigenvars_Light_down[11]/weight_bTagSF"
+  Smoothing: 40
+  Symmetrisation: TWOSIDED
+  
+Systematic: "BTag_Extrapolation"; "BTag_ExtrapolationFromCharm"
+  Title: "b-tag Extrapolation";"b-tag Extrapolation from c"
+  Type: HISTO
+%   Samples: all
+  Samples: ttbar ttH
+  WeightSufDown: "weight_bTagSF_extrapolation_down/weight_bTagSF"; "weight_bTagSF_extrapolation_from_charm_down/weight_bTagSF"
+  Smoothing: 40
+  Symmetrisation: ONESIDED
+  
+% Systematics with separate trees
+
+Systematic: "JES_BJES_Response";"JES_Flavor_Composition";"JES_Flavor_Response"
+  Title: "JES b-JES Response";"JES flav. Composition";"JES flav. Response"
+  Type: HISTO
+%   Samples: all
+  Samples: ttbar ttH
+  NtupleNameUp: "JET_19NP_JET_BJES_Response__1up";"JET_19NP_JET_Flavor_Composition__1up";"JET_19NP_JET_Flavor_Response__1up"
+  NtupleNameDown: "JET_19NP_JET_BJES_Response__1down";"JET_19NP_JET_Flavor_Composition__1down";"JET_19NP_JET_Flavor_Response__1down"
+  Smoothing: 40
+  Symmetrisation: TWOSIDED
+
+Systematic: "JES_EffectiveNP_1";"JES_EffectiveNP_2";"JES_EffectiveNP_3";"JES_EffectiveNP_4";"JES_EffectiveNP_5";"JES_EffectiveNP_6restTerm"
+  Title: "JES eff.NP 1";"JES eff.NP 2";"JES eff.NP 3";"JES eff.NP 4";"JES eff.NP 5";"JES eff.NP 6 (rest term)"
+  Type: HISTO
+%   Samples: all
+  Samples: ttbar ttH
+  NtupleNameUp: "JET_19NP_JET_EffectiveNP_1__1up";"JET_19NP_JET_EffectiveNP_2__1up";"JET_19NP_JET_EffectiveNP_3__1up";"JET_19NP_JET_EffectiveNP_4__1up";"JET_19NP_JET_EffectiveNP_5__1up";"JET_19NP_JET_EffectiveNP_6restTerm__1up"
+  NtupleNameDown: "JET_19NP_JET_EffectiveNP_1__1down";"JET_19NP_JET_EffectiveNP_2__1down";"JET_19NP_JET_EffectiveNP_3__1down";"JET_19NP_JET_EffectiveNP_4__1down";"JET_19NP_JET_EffectiveNP_5__1down";"JET_19NP_JET_EffectiveNP_6restTerm__1down"
+  Smoothing: 40
+  Symmetrisation: TWOSIDED
+
+Systematic: "JES_EtaIntercalibration_Modelling";"JES_EtaIntercalibration_TotalStat"
+  Title: "JES #eta intercalib. (model)";"JES #eta intercalib. (stat)"
+  Type: HISTO
+%   Samples: all
+  Samples: ttbar ttH
+  NtupleNameUp: "JET_19NP_JET_EtaIntercalibration_Modelling__1up";"JET_19NP_JET_EtaIntercalibration_TotalStat__1up"
+  NtupleNameDown: "JET_19NP_JET_EtaIntercalibration_Modelling__1down";"JET_19NP_JET_EtaIntercalibration_TotalStat__1down"
+  Smoothing: 40
+  Symmetrisation: TWOSIDED
+
+Systematic: "JES_Pileup_OffsetMu";"JES_Pileup_OffsetNPV";"JES_Pileup_PtTerm";"JES_Pileup_RhoTopology"
+  Title: "JES pileup (Offset #mu)";"JES Pileup (offset NPV)";"JES Pileup (p_{T}-term)";"JES Pileup (#rho-topology)"
+  Type: HISTO
+%   Samples: all
+  Samples: ttbar ttH
+  NtupleNameUp: "JET_19NP_JET_Pileup_OffsetMu__1up";"JET_19NP_JET_Pileup_OffsetNPV__1up";"JET_19NP_JET_Pileup_PtTerm__1up";"JET_19NP_JET_Pileup_RhoTopology__1up"
+  NtupleNameDown: "JET_19NP_JET_Pileup_OffsetMu__1down";"JET_19NP_JET_Pileup_OffsetNPV__1down";"JET_19NP_JET_Pileup_PtTerm__1down";"JET_19NP_JET_Pileup_RhoTopology__1down"
+  Smoothing: 40
+  Symmetrisation: TWOSIDED
+
+Systematic: "JES_PunchThrough_MC15";"JES_SingleParticle_HighPt";"JES_Xcalib_1"
+  Title: "JES punch-through MC15";"JES single particle high-p_{T}";"JES X calib. 1"
+  Type: HISTO
+%   Samples: all
+  Samples: ttbar ttH
+  NtupleNameUp: "JET_19NP_JET_PunchThrough_MC15__1up";"JET_19NP_JET_SingleParticle_HighPt__1up";"JET_19NP_JET_Xcalib_1__1up"
+  NtupleNameDown: "JET_19NP_JET_PunchThrough_MC15__1down";"JET_19NP_JET_SingleParticle_HighPt__1down";"JET_19NP_JET_Xcalib_1__1down"
+  Smoothing: 40
+  Symmetrisation: TWOSIDED
+
+Systematic: "JER"
+  Title: "JER"
+  Type: HISTO
+%   Samples: all
+  Samples: ttbar ttH
+  NtupleNameUp: "JET_JER_SINGLE_NP__1up"
+  Smoothing: 40
+  Symmetrisation: ONESIDED
+
+% Systematics with separate files
+  
+Systematic: "tt_Radiation"
+  Title: "t#bar{t} Radiation"
+  Type: HISTO
+  Samples: ttbar
+  NtupleFileSufUp: "_radHi"
+  NtupleFileSufDown: "_radLo"
+  Smoothing: 40
+  Symmetrisation: TWOSIDED
+
+
+Systematic: "tt_Shower"
+  Title: "t#bar{t} PS (Herwig++)"
+  Type: HISTO
+  Samples: ttbar
+  NtupleFileSufUp: "_herpp"
+  Smoothing: 40
+  Symmetrisation: ONESIDED
+  
+% Systematic: "tt_Shower2"
+%   Title: "t#bar{t} PS (Pythia8)"
+%   Type: HISTO
+%   Samples: ttbar
+%   NtupleFileSufUp: "_pyt8"
+%   Smoothing: 40
+%   Symmetrisation: ONESIDED
+
+Systematic: "tt_MC"
+  Title: "t#bar{t} NLO Gen. (aMCatNLO)"
+  Type: HISTO
+  Samples: ttbar
+  NtupleFileSufUp: "_amcatnlo"
+  Smoothing: 40
+  Symmetrisation: ONESIDED
+
+% Systematic: "tt_MC2"
+%   Title: "t#bar{t} NLO Gen. (Sherpa)"
+%   Type: HISTO
+%   Samples: ttbar
+%   NtupleFileSufUp: "_sherpa"
+%   Smoothing: 40
+%   Symmetrisation: ONESIDED
+  
